# Trendify-E-Commerce-Website

./: .gitignore  Directory_Structure.md  Dockerfile  LICENSE  Readme.md  app.py  data.db  requirements.txt
backend/: Encryption.py  OTPs.py  app.py  database.py  encryption.py  order.py  product.py  tags_AI.py  user_context_manager.py  user_state.py
dependencies/: user_context.json
dependencies/AES_Implementation/: C++ Program.cpp  CMakeLists.txt
dependencies/AES_Implementation/include/: AES.hpp  AES_Decryption.hpp  AES_Encryption.hpp  Helper.hpp  Key_Scheduler.hpp  S_Box.hpp
dependencies/AES_Implementation/src/: AES.cpp  AES_Decryption.cpp  AES_Encryption.cpp  Helper.cpp  Key_Scheduler.cpp  S_Box.cpp  decrypt.cpp  encrypt.cpp
docs/: Directory_Structure.md  Trendify.avif  orders.jsx
frontend/: index.html  package-lock.json  package.json  script.js
frontend/src/: App.js
frontend/src/components/: HeaderNavigation.js  Home.js  Login.js  ProductModal.js  Product_List.js  SellerDashboard.js  StatCard.js  cart.js  cus_agent_order.js  header_footer.js  orders.js  productPage.js  thankyou.js
frontend/src/components/CSS/: Header_Footer.css  add_product.css  checkout.css  login.css  orders.css  product.css  slideshow.css  styles.css  thankyou.css
frontend/src/components/JS/: Checkout.js
frontend/src/components/Seller/: ProductModal.js  Products.js  SellerHome.js
src/AES_Implementation/include/: AES.hpp  AES_Encryption.hpp  Key_Scheduler.hpp  S_Box.hpp
src/AES_Implementation/src/: AES.cpp  AES_Encryption.cpp  Key_Scheduler.cpp  S_Box.cpp  main.cpp
